# uppsala

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  publish.yml  release.yml
docs/adr/: 0001-configurable-qname-length-facet-enforcement.md  0002-simd-accelerated-byte-scanning.md  0003-ms-datatypes-anyuri-test-skip.md  0004-security-resource-limits.md  0005-xml-declaration-sanitization.md
examples/: build_xml.rs  parse_and_query.rs  validate_schema.rs
src/: dom.rs  error.rs  lib.rs  namespace.rs  parser.rs  simd.rs  writer.rs  xpath.rs  xsd.rs  xsd_regex.rs
src/xsd/: builder.rs  builtins.rs  composition.rs  datetime.rs  decimal.rs  facet_resolution.rs  identity.rs  mod.rs  parser.rs  tests.rs  types.rs  validation.rs  wildcard.rs
test-data/xsts/xmlschema2006-11-06/CVS/: Entries  Repository
test-data/xsts/xmlschema2006-11-06/boeingData/CVS/: Entries  Repository
test-data/xsts/xmlschema2006-11-06/boeingData/ipo1/CVS/: Entries  Repository
test-data/xsts/xmlschema2006-11-06/boeingMeta/CVS/: Entries  Repository
test-data/xsts/xmlschema2006-11-06/nistData/CVS/: Entries  Repository
test-data/xsts/xmlschema2006-11-06/nistMeta/CVS/: Entries  Repository
test-data/xsts/xmlschema2006-11-06/nistMeta/img/CVS/: Entries  (+1 more)
test-data/xsts/xmlschema2006-11-06/sunData/CVS/: Entries  Repository
test-data/xsts/xmlschema2006-11-06/sunMeta/CVS/: Entries  Repository
tests/: namespace_conformance.rs  range_conformance.rs  serialization_conformance.rs  w3c_xmlconf.rs  w3c_xsts.rs  xml_conformance.rs  xpath_conformance.rs  xsd_composition.rs  xsd_conformance.rs
(+16 files in other folders)
